# agri-paper

./: .gitattributes  .gitignore  LOCAL_LLM_CHECKLIST.md  OLLAMA_READY_CHECKLIST.md  PHASE_REPORT_2026-04-10.md  PHASE_REPORT_2026-04-15.md  PROJECT_STATUS.md  README.md  multi_work_plan_w3.md  requirements.txt
.github/: PROJECT_SUMMARY.md
configs/: agri_expert.toml
datasets/: README.md  agri_qa_benchmark.jsonl  agri_qa_benchmark_extended.jsonl  generate_benchmark.py
docs/: agri_tag_vocabulary.md
schemas/: agri_observations.sql
tools/rust_llm_poc/: Cargo.toml  run_eval.bat  run_eval_chunks.py
tools/rust_llm_poc/src/: eval.rs  main.rs
w1/: handover_w1.yaml  handover_w2.yaml
w1/engineer/: agri_profile.toml
w1/research/: innovation_claim.md  literature_matrix.md
w1/writer/: outline.md  target_journal.md
w3/: handover_w3.yaml
w3/engineer/: handover_subagent.yaml
w3/research/: cnki_bib.txt  cnki_gap_analysis.md  cnki_results.md  handover_subagent.yaml
w3/writer/: citations.bib  handover_subagent.yaml  introduction.tex  related_work.tex
w4/: VERIFICATION_REPORT.md  plan.md
w4/arxiv/: arxiv_submission.tex  citations.bib  conclusion.tex  discussion.tex  experiments.tex  main.bbl  main.blg  main.tex  main_arxiv.aux  main_arxiv.out  main_arxiv.tex  methodology.tex
w4/engineer/: validation_results.json
w4/research/: MATURE_ROADMAP_2026-04-17.md  ai_agribench_request.md  arxiv_compile_instructions.md  extended_diseases.jsonl  generation_proxy_eval.py  generation_proxy_results.json  kb_expansion_plan.md  llm_eval_plan.md  llm_eval_raw_1776429216.jsonl  (+11 more)
(+9 files in other folders)
